--- a/package.json
+++ b/package.json
@@ -9,15 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.40",
+    "@expo/metro-runtime": "~4.0.1",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-google-maps/api": "^2.20.6",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^21.12.3",
+    "@react-native-firebase/auth": "^21.12.3",
+    "@react-native-firebase/firestore": "^21.12.3",
+    "@react-navigation/bottom-tabs": "^7.3.2",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/native-stack": "^7.3.2",
+    "expo": "~52.0.42",
+    "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.5.0",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-dom": "18.3.1",
+    "react-native": "^0.76.9",
+    "react-native-maps": "^1.18.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0",
+    "@types/node": "^22.13.14",
     "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.2"
   },
   "private": true
 }
